# ashare-sentiment

./: ADVANCED_GUIDE.md  BACKTEST_COMPLETE_SUMMARY.md  BACKTEST_GUIDE.md  BACKTEST_IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  REVIEW_REPORT.md  WESTOCK_DESIGN.md  backtest_config.yaml  example_config.yaml  example_config_download.yaml  example_westock_config.yaml  pyproject.toml  requirements.txt  test_backtest.py
src/ashare_sentiment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sentiment_ashare/: __init__.py  cli.py  config.py
src/sentiment_ashare/backtest/: __init__.py  backtest_engine.py  data_manager.py  performance_analyzer.py  report_generator.py  strategy_engine.py
src/sentiment_ashare/downloaders/: __init__.py  akshare_downloader.py  tushare_downloader.py
src/sentiment_ashare/features/: __init__.py  advanced.py  basic.py  sentiment_classifier.py  westock_features.py
src/sentiment_ashare/models/: __init__.py
src/sentiment_ashare/providers/: __init__.py  csv_provider.py  data_loader.py  westock_provider.py
src/sentiment_ashare/scoring/: __init__.py  aggregate.py
